Regression: OBJ Import crashes #108571

Closed
opened 2023-06-03 23:23:56 +02:00 by Amy Moo · 5 comments

System Information
Operating system: Windows 10 22H2
Graphics card: NVIDIA Quadro FX 880M

Blender Version
Broken: 3.6.0, 5b5a1e3581, 2023-05-30
Worked: 3.5.1 release

Apparently caused by e35f971da1

Short description of error
Blender crashes when importing an OBJ file using Wavefront (.obj). But the same OBJ file can be imported using Wavefront (.obj) (legacy). See the attached blender.crash.txt for details.

Exact steps for others to reproduce the error
Start Blender
Import an OBJ file

**System Information** Operating system: Windows 10 22H2 Graphics card: NVIDIA Quadro FX 880M **Blender Version** Broken: 3.6.0, 5b5a1e358102, 2023-05-30 Worked: 3.5.1 release Apparently caused by e35f971da1903be3743f016aaf60fc4caf2fc055 **Short description of error** Blender crashes when importing an OBJ file using Wavefront (.obj). But the same OBJ file can be imported using Wavefront (.obj) (legacy). See the attached blender.crash.txt for details. **Exact steps for others to reproduce the error** Start Blender Import an OBJ file
Amy Moo added the
Severity
Normal
Type
Report
Status
Needs Triage
labels 2023-06-03 23:23:57 +02:00

Please attach the .obj that is causing the crash.

Please attach the .obj that is causing the crash.
Jesse Yurkovich added
Status
Needs Information from User
and removed
Status
Needs Triage
labels 2023-06-03 23:44:39 +02:00
Author

The attached zip contains the test files, TestOBJImport.obj and TestOBJImport.mtl. In this case, Blender crashes only if "Vertex Group" is selected. The settings used are captured in the attached screenshot.

The attached zip contains the test files, TestOBJImport.obj and TestOBJImport.mtl. In this case, Blender crashes only if "Vertex Group" is selected. The settings used are captured in the attached screenshot.
Iliya Katushenock changed title from OBJ Import crashes to Regression: OBJ Import crashes 2023-06-04 09:48:41 +02:00
Member

Broke between 14b112ef82 - 0a460d4707

Broke between 14b112ef825f - 0a460d470718
Pratik Borhade added the
Interest
Modeling
label 2023-06-05 05:51:22 +02:00
Member

Apparently caused by e35f971da1

CC @HooglyBoogly

Apparently caused by e35f971da1903be3743f016aaf60fc4caf2fc055 CC @HooglyBoogly
Hans Goudey self-assigned this 2023-06-05 14:09:23 +02:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-06-06 02:20:40 +02:00
Hans Goudey added
Type
Bug
and removed
Type
Report
labels 2023-06-06 02:21:39 +02:00
Author

Thanks, I checked it with 3.6.0 Beta a56df90931. It works.

Thanks, I checked it with 3.6.0 Beta a56df9093183. It works.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Viewport & EEVEE
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Module
Viewport & EEVEE
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Severity
High
Severity
Low
Severity
Normal
Severity
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#108571
No description provided.