Fix #108571: OBJ vertex group import crash

`tot_loop_idx` was increased before it was used to set the set
the vertex group value of the current face corner's vertex.